# vocalplayer

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  README_zh-CN.md  changelog.md  contributing.md  contributing_zh-CN.md  justfile  todo.md  vcpkg-configuration.json  vcpkg.json  xmake.lua
.cursor/plans/: engineering-practices-rollout_104ed6d6.plan.md  playlist_interaction_upgrade_5275b1e5.plan.md  stereo_visualization_intro_8cc94740.plan.md  v0.2_ui迭代规划_abf59389.plan.md  v0.4_ascii_decoration_403b5812.plan.md  visual_pipeline_perf_fix_c82ac75a.plan.md  vocalplayer_c++_mvp_0f0109dd.plan.md  windows-utf8-metadata-fix_eced2090.plan.md
.cursor/rules/: cpp-programming-guidelines.mdc  general.mdc
.github/actions/vocalplayer-vcpkg-setup/: action.yml
.github/workflows/: ci.yml  release.yml
cmake/toolchains/: mingw-w64-vcpkg-chainload.cmake  mingw-w64-x86_64.cmake
docs/: visual.md  visual_zh-CN.md
docs/dev/: architecture.md  architecture_zh-CN.md
scripts/: build-windows.sh
scripts/git_hooks/: run_clang_format_staged.sh  run_quick_tests.sh
src/: main.cpp
src/analysis/: spectrum_analyzer.cpp  spectrum_analyzer.hpp
src/app/: app_controller.cpp  app_controller.hpp  playlist.cpp  playlist.hpp
src/audio/: audio_engine.cpp  audio_engine.hpp  decoder.cpp  decoder.hpp  metadata.cpp  metadata.hpp
src/platform/: console.hpp  console_posix.cpp  console_windows.cpp  miniaudio_decoder_open.hpp  miniaudio_decoder_open_posix.cpp  miniaudio_decoder_open_windows.cpp
src/shared/: types.hpp
src/ui/: coalescing_redraw_gate.hpp  keybindings.hpp  theme.hpp  tui_renderer.cpp  tui_renderer.hpp  visual_update_pipeline.cpp  visual_update_pipeline.hpp
tests/: test_coalescing_redraw_gate.cpp  test_keybindings.cpp  test_playlist.cpp  test_spectrum_analyzer.cpp  test_theme.cpp
